<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fuck RollingSky Pay</string>
    <string name="app_Action">此Xposed模块可以让“滚动的天空”免内购！\n欢迎使用本模块！\n使用此模块后，跳转微信支付点返回即可获得奖励！\n如果您使用的是LSPosed请注意勾选模块作用域哦！</string>
    <string name="Author_Home_Page">SB6.ME</string>
    <string name="Author_QQ">问题反馈</string>
    <string name="Open_RS">打开RS</string>
    <string name="Modules_Off">模块未激活</string>
    <string name="Modules_On">模块已激活</string>
	<string name="Modules_On_VM">虚拟环境激活</string>
	<string name="Modules_On_VMOS">虚拟机激活</string>
    <string name="Modules_Off_Tips">当前模块未激活，您将无法使用本模块的免内购和过联网验证功能\n\n解决方法：\n如果没有XP环境可以尝试刷入LSPosed或Edxposed并勾选此模块后重启手机\n如果有XP环境请勾选此模块并重启手机</string>
    <string name="OK">好</string>
    <string name="Open_Browser">正在尝试拉起浏览器</string>
    <string name="Open_QQ">正在尝试拉起QQ</string>
    <string name="Open_RollingSky">正在尝试启动RollingSky</string>
    <string name="No_Browser">您没有安装任何浏览器</string>
    <string name="No_QQ">你没有安装QQ或TIM</string>
    <string name="No_RS">你没有安装此版本的RS</string>
    <string name="Open_MG">更多应用</string>
    <string name="Load">正在加载中......</string>
    <string name="Load_Ing">稍安勿躁......\n耐心，是生活的关键。</string>
    <string name="No_Web">网络链接异常！</string>
    <string name="No">取消</string>
    <string name="New_Ver">发现新版本</string>
    <string name="Update">新版本可用，是否更新？</string>
    <string name="Inspect_Fail">检查更新失败，请检查你的网络</string>
    <string name="Up">更新</string>
    <string name="danger">重要提示</string>
    <string name="alert">隐藏桌面图标后，你可以在xposed管理器打开此模块。\n部分系统可能不支持，依然会存在桌面图标，但无法正常进入此程序！\n无特殊需求不要这样做！</string>
    <string name="sb">我依然隐藏</string>
    <string name="hide_icon">隐藏桌面图标</string>
	<string name="hf_icon">显示桌面图标</string>
    <string name="ts1">此应用由君子开发</string>
    <string name="ts2">完全免费使用，请勿上当受骗</string>
    <string name="ts3">本应用不负任何法律责任，使用者请自酌</string>
    <string name="zitan">感谢紫檀协助本人开发</string>
    <string name="szimg">禁用启动时自动加载网络图片</string>
	<string name="szimgx">启用启动时自动加载网络图片</string>
    <string name="sni">已启用启动时自动加载网络图片</string>
    <string name="sfi">已禁用启动时自动加载网络图片</string>
    <string name="zcbb">支持版本</string>
    <string name="zcbb_a">当前支持的版本</string>
    <string name="nomg">你没有安装这个应用</string>
    <string name="opmg">正在尝试打开这个应用</string>
    <string name="mrs">没安装官方版本RS，还支持以下版本</string>
	<string name="hf">桌面图标已恢复显示</string>
	<string name="yci">桌面图标已隐藏</string>
</resources>
