<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<ImageView
		android:id="@+id/Background"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:scaleType="centerCrop"/>

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ts1"
			android:textColor="#000"
			android:layout_gravity="center_horizontal"
			android:layout_marginTop="50dp"
			android:textSize="18dp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ts2"
			android:textColor="#000"
			android:layout_gravity="center_horizontal"
			android:textSize="18dp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/ts3"
			android:textColor="#000"
			android:layout_gravity="center_horizontal"
			android:textSize="18dp"/>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/zitan"
			android:textColor="#000"
			android:layout_gravity="center_horizontal"
			android:textSize="18dp"/>

		<Button
			android:id="@+id/zuozheMain"
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:text="@string/Author_Home_Page"
			android:textSize="18dp"
			android:textColor="#000"
			android:background="#fff"
			android:layout_marginTop="50dp"
			android:alpha="0.55"/>

		<Button
			android:id="@+id/openQQButton"
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:text="@string/Author_QQ"
			android:textSize="18dp"
			android:textColor="#000"
			android:background="#fff"
			android:alpha="0.55"/>

		<Button
			android:id="@+id/ycicon"
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:text="@string/hide_icon"
			android:background="#fff"
			android:textSize="18dp"
			android:textColor="#000"
			android:alpha="0.55"/>

		<Button
			android:id="@+id/szimg"
			android:layout_width="match_parent"
			android:layout_height="45dp"
			android:text="@string/szimg"
			android:background="#fff"
			android:textSize="18dp"
			android:textColor="#000"
			android:alpha="0.55"/>

		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:gravity="bottom">

			<ImageView
				android:id="@+id/github"
				android:layout_width="50dp"
				android:layout_height="50dp"
				android:src="@drawable/github"
				layout_marginRight="3dp"
				android:layout_gravity="center_horizontal"
				android:layout_marginBottom="65dp"/>

		</LinearLayout>

	</LinearLayout>

</RelativeLayout>

