<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">
    
    <ImageView
        android:id="@+id/Background"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"/>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="18dp"
        android:textColor="#000"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_Action"
        android:textSize="15dp"
        android:textColor="#444"
        android:gravity="center"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="16dp"
        android:padding="16dp"/>

    <Button
        android:id="@+id/clickButton"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:text="@string/zcbb"
        android:textColor="#fff"
        android:background="#91272626"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_below="@id/descriptionTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <Button
        android:id="@+id/openMGButton"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:text="@string/Open_MG"
        android:textColor="#fff"
        android:background="#91272626"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_below="@id/clickButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <Button
        android:id="@+id/openRSButton"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:text="@string/Open_RS"
        android:textColor="#fff"
        android:background="#91272626"
        android:textSize="16dp"
        android:textStyle="bold"
        android:layout_below="@id/openMGButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"/>

    <TextView
        android:id="@+id/moduleStatusTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Modules_Off"
        android:textSize="15dp"
        android:textColor="#000"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="16dp"/>
</RelativeLayout>

